# x86boot

./: .gitignore  configure.ac
include/asm/i386/: bios.h  boot.h
src/: Makefile.am
src/boot/i386/: boot.S
src/kernel/i386/: start.S
